# golf-scorecards

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agents.md  fly.toml  pyproject.toml
docs/: backlog.md  implementation-plan.md  index.html  round-tracking-plan.md
docs/css/: app.css
docs/js/: app.js  courses.js
slopes/forus/: 35.html  48.html  51.html  55.html  58.html  63.html
slopes/solastranden/: 30.html  41.html  50.html
src/golf_scorecards/: __init__.py  cli.py  config.py  course_data.py  main.py  py.typed  settings_repo.py
src/golf_scorecards/catalog/: __init__.py  models.py  repository.py  service.py
src/golf_scorecards/db/: connection.py  schema.sql
src/golf_scorecards/export/: __init__.py
src/golf_scorecards/handicap/: __init__.py  models.py  repository.py  service.py
src/golf_scorecards/insights/: __init__.py  metrics.yaml  prompts.py  serializers.py  service.py
src/golf_scorecards/rounds/: __init__.py  models.py  repository.py  service.py  stats.py  trends.py
src/golf_scorecards/scorecards/: __init__.py  builder.py  forms.py  models.py
src/golf_scorecards/templates/: _macros.html  base.html  coach.html  home.html  login.html  round_create.html  round_detail.html  round_entry.html  round_list.html  round_play_grid.html  round_play_hole.html  scorecard_preview.html  (+3 more)
tests/: test_auth.py  test_catalog_service.py  test_course_data.py  test_forus_handicap_service.py  test_health.py  test_insights.py  test_play_routes.py  test_round_routes.py  test_round_service.py  test_stats.py  test_trends.py  test_web_routes.py
(+13 files in other folders)
